# Gerenciador_Restaurante

./: Diagrama sem nome.drawio  Diagrama_de_Classes.drawio  LICENSE  README.md  app.py  doc.md  main.py  pyproject.toml  requirements.txt
modulos/: classes.py
modulos/dados/: clientes.csv  reservas.csv
mudulos/: classes.py
