[tool.poetry]
name = "modulos"
version = "0.1.0"
description = ""
authors = ["Fermoreno <fernando.santosm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.1"
numpy = "^1.26.4"
pandas = "^2.2.1"
streamlit-option-menu = "^0.3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "app:main"